fix(comments): add some whitespace

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -299,6 +299,7 @@
     border: 1px solid #90caf9;
     border-radius: 1px;
     padding: 5px 10px;
+    margin-bottom: 48px;
 }
 
 .post-author-heading {
